--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,13 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
+/Inputs/omac_BoP_point_stare_2018_04_23_16_48_29/* filter=lfs diff=lfs merge=lfs -text
+/Inputs/omac_spectralon_only_point_stare_2018_04_23_17_38_17/* filter=lfs diff=lfs merge=lfs -text
+/Inputs/Radiance_calib_figs/*
+git[[:space:]]lfs[[:space:]]track[[:space:]].png
+ filter=lfs diff=lfs merge=lfs -text
+/Inputs/Radiance_calib_figs/*
+git[[:space:]]lfs[[:space:]]track[[:space:]]".png"
+"
+ filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.ASC filter=lfs diff=lfs merge=lfs -text
+/Inputs/Subset_for* filter=lfs diff=lfs merge=lfs -text
