--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 /Inputs/omac_BoP_point_stare_2018_04_23_16_48_29/* filter=lfs diff=lfs merge=lfs -text
 /Inputs/omac_spectralon_only_point_stare_2018_04_23_17_38_17/* filter=lfs diff=lfs merge=lfs -text
-/Inputs/Radiance_calib_figs/*
+/Inputs/Radiance_calib_figs/* filter=lfs diff=lfs merge=lfs -text
 git[[:space:]]lfs[[:space:]]track[[:space:]].png
  filter=lfs diff=lfs merge=lfs -text
 /Inputs/Radiance_calib_figs/*
